--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.18",
     "@clerk/nextjs": "^6.19.5",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
+    "@langchain/community": "^0.3.44",
+    "@langchain/core": "^0.3.57",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -55,23 +59,35 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@uiw/react-md-editor": "^4.0.7",
+    "ai": "^4.3.16",
+    "assemblyai": "^4.12.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^11.8.1",
+    "ignore": "^7.0.4",
     "input-otp": "^1.4.2",
+    "langchain": "^0.3.27",
     "lucide-react": "^0.511.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "octokit": "^5.0.2",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "stripe": "^18.2.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.0",
     "usehooks-ts": "^3.1.1",
@@ -84,6 +100,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "postcss": "^8.5.3",
@@ -91,8 +108,9 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.8.2",
     "tailwindcss": "^4.0.15",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.27.0"
   },
   "ct3aMetadata": {
